--- a/app/src/main/res/layout/mini_fab_container.xml
+++ b/app/src/main/res/layout/mini_fab_container.xml
@@ -9,7 +9,7 @@
     android:layout_marginEnd="4dp"
     app:layout_anchor="@id/fab"
     app:layout_anchorGravity="bottom|center_horizontal"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/miniFabToggle"
