--- a/app/src/main/res/layout/activity_load.xml
+++ b/app/src/main/res/layout/activity_load.xml
@@ -8,9 +8,9 @@
         android:id="@+id/andromedaWarningHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:paddingStart="48dp"
-        android:paddingEnd="48dp"
+        android:layout_margin="@dimen/andromeda_warning_margin"
+        android:paddingStart="@dimen/andromeda_warning_padding_side"
+        android:paddingEnd="@dimen/andromeda_warning_padding_side"
         android:text="@string/oops"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
         android:textColor="?android:textColorPrimary"
@@ -24,10 +24,10 @@
         android:id="@+id/andromedaWarningBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:paddingStart="48dp"
-        android:paddingEnd="48dp"
-        android:text="TextView"
+        android:layout_margin="@dimen/andromeda_warning_margin"
+        android:paddingStart="@dimen/andromeda_warning_padding_side"
+        android:paddingEnd="@dimen/andromeda_warning_padding_side"
+        android:text="@string/not_meant_for_you"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:layout_constraintBottom_toTopOf="@id/retryAndromeda"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,5 +46,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/andromedaWarningBody"
+        app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/ic_refresh_24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
