--- a/app/src/main/res/layout/overlay_category.xml
+++ b/app/src/main/res/layout/overlay_category.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="56dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="4dp"
+    android:layout_marginStart="@dimen/overlay_category_margin_start"
+    android:layout_marginTop="@dimen/overlay_category_margin_top"
+    android:layout_marginEnd="@dimen/overlay_category_margin_end"
+    android:layout_marginBottom="@dimen/overlay_category_margin_bottom"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/categoryIconView"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="@dimen/overlay_category_icon_size"
+        android:layout_height="@dimen/overlay_category_icon_size"
         android:layout_gravity="center_vertical"
-        android:layout_margin="8dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_margin="@dimen/overlay_category_icon_margin" />
 
     <TextView
         android:id="@+id/categoryNameView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/overlay_category_text_margin"
         android:layout_weight="1"
-        android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Material.Title" />
+        android:text="Category Name"
+        android:textAppearance="@style/TextAppearanceOverlay.Category" />
 </LinearLayout>
