--- a/app/src/main/res/layout/overlay_item.xml
+++ b/app/src/main/res/layout/overlay_item.xml
@@ -5,32 +5,37 @@
     style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
-    android:clickable="true">
+    android:layout_marginStart="@dimen/overlay_item_card_margin_side"
+    android:layout_marginTop="@dimen/overlay_item_card_margin_top_bottom"
+    android:layout_marginEnd="@dimen/overlay_item_card_margin_side"
+    android:layout_marginBottom="@dimen/overlay_item_card_margin_top_bottom"
+    android:clickable="true"
+    app:contentPadding="@dimen/overlay_item_card_content_padding">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="64dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <CheckBox
             android:id="@+id/itemCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/overlay_item_common_margin_side"
+            android:layout_marginEnd="@dimen/overlay_item_common_margin_side"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/appIconView"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
+            android:layout_width="@dimen/overlay_item_icon_size"
+            android:layout_height="@dimen/overlay_item_icon_size"
+            android:layout_marginStart="@dimen/overlay_item_common_margin_side"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/itemCheckBox"
             app:layout_constraintTop_toTopOf="parent" />
@@ -39,12 +44,10 @@
             android:id="@+id/appNameView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:text="TextView"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:layout_marginStart="@dimen/overlay_item_text_margin_side"
+            android:layout_marginEnd="@dimen/overlay_item_text_margin_side"
+            android:text="App Name"
+            android:textAppearance="@style/TextAppearanceOverlay.Item.AppName"
             app:layout_constraintBottom_toTopOf="@id/packageNameView"
             app:layout_constraintEnd_toStartOf="@id/overlaySwitch"
             app:layout_constraintStart_toEndOf="@id/appIconView"
@@ -54,19 +57,18 @@
             android:id="@+id/packageNameView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:text="TextView"
+            android:text="Pakckage Name"
+            android:textAppearance="@style/TextAppearanceOverlay.Item.PackageName"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/overlaySwitch"
-            app:layout_constraintStart_toEndOf="@id/appIconView"
+            app:layout_constraintEnd_toEndOf="@id/appNameView"
+            app:layout_constraintStart_toStartOf="@id/appNameView"
             app:layout_constraintTop_toBottomOf="@id/appNameView" />
 
         <Switch
             android:id="@+id/overlaySwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/overlay_item_common_margin_side"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
