--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,21 @@
     </style>
 
     <style name="MiniFabText">
-        <item name="android:layout_margin">4dp</item>
+        <item name="android:layout_margin">@dimen/mini_fab_text_margin</item>
     </style>
 
+    <style name="TextAppearanceOverlay" parent="android:TextAppearance.Material" />
+
+    <style name="TextAppearanceOverlay.Category" parent="android:TextAppearance.Material.Large">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextAppearanceOverlay.Item" />
+
+    <style name="TextAppearanceOverlay.Item.AppName" parent="android:TextAppearance.Material.Medium">
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextAppearanceOverlay.Item.PackageName" parent="android:TextAppearance.Material.Small" />
 </resources>
