--- a/app/src/main/res/layout/overlay_category.xml
+++ b/app/src/main/res/layout/overlay_category.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/categoryLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/overlay_category_margin_start"
-    android:layout_marginTop="@dimen/overlay_category_margin_top"
-    android:layout_marginEnd="@dimen/overlay_category_margin_end"
-    android:layout_marginBottom="@dimen/overlay_category_margin_bottom"
+    android:background="?selectableItemBackground"
+    android:paddingStart="@dimen/overlay_category_padding_start"
+    android:paddingTop="@dimen/overlay_category_padding_top_bottom"
+    android:paddingEnd="@dimen/overlay_category_padding_end"
+    android:paddingBottom="@dimen/overlay_category_padding_top_bottom"
     android:orientation="horizontal">
 
     <ImageView
