--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,13 +3,6 @@
     <dimen name="andromeda_warning_margin">16dp</dimen>
     <dimen name="andromeda_warning_padding_side">48dp</dimen>
     <dimen name="appbar_height">192dp</dimen>
-    <dimen name="fab_container_margin_end">8dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="fab_size_normal">56dp</dimen>
-    <dimen name="mini_fab_initial_alpha">0</dimen>
-    <dimen name="mini_fab_margin">16dp</dimen>
-    <dimen name="mini_fab_text_margin">4dp</dimen>
-    <dimen name="mini_fab_transition_distance">8dp</dimen>
     <dimen name="overlay_category_icon_margin">8dp</dimen>
     <dimen name="overlay_category_icon_size">32dp</dimen>
     <dimen name="overlay_category_padding_top_bottom">4dp</dimen>
@@ -23,4 +16,5 @@
     <dimen name="overlay_item_icon_size">48dp</dimen>
     <dimen name="overlay_item_text_margin_side">16dp</dimen>
     <dimen name="recycler_view_padding_bottom">96dp</dimen>
+    <dimen name="sd_label_max_width">240dp</dimen>
 </resources>
