Store checked info in OverlayItem again & add batch uninstall

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,6 +3,5 @@
     <item name="fab_disable" type="id" />
     <item name="fab_enable" type="id" />
     <item name="fab_toggle" type="id" />
-    <item name="fab_enable" type="id" />
-    <item name="fab_disable" type="id" />
+    <item name="fab_uninstall" type="id" />
 </resources>
