Slight changes in andromeda warning texts

--- a/app/src/main/res/layout/activity_load.xml
+++ b/app/src/main/res/layout/activity_load.xml
@@ -28,7 +28,8 @@
         android:paddingStart="@dimen/andromeda_warning_padding_side"
         android:paddingEnd="@dimen/andromeda_warning_padding_side"
         android:text="@string/not_meant_for_you"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         app:layout_constraintBottom_toTopOf="@id/retryAndromeda"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
